--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/vscode": "1.90.0",
 		"@vscode/vsce": "latest",
 		"esbuild": "latest",
+		"ovsx": "latest",
 		"typescript": "latest"
 	},
 	"displayName": "B9AutoCloseTab",
@@ -64,5 +65,5 @@
 		"vscode:prepublish": "rm -rf dist && node esbuild.js --production",
 		"watch": "node esbuild.js --watch"
 	},
-	"version": "0.1.0"
+	"version": "0.2.0"
 }
